--- a/app/src/main/res/drawable/chip_red.xml
+++ b/app/src/main/res/drawable/chip_red.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#FF0000" />
+    <solid android:color="@color/red_chip" />
     <stroke
-        android:width="2dp"
-        android:color="#CC0000" />
+        android:width="3dp"
+        android:color="#FFC62828" />
 </shape>
