--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,20 +7,22 @@
     android:background="@color/dark_blue">
 
     <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@drawable/splash_circle">
+        android:background="@drawable/splash_circle"
+        android:elevation="8dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="C4"
-            android:textSize="80sp"
+            android:textSize="72sp"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:gravity="center" />
+            android:gravity="center"
+            android:fontFamily="sans-serif-light" />
 
     </LinearLayout>
 
@@ -28,11 +30,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CONNECTA 4"
-        android:textSize="40sp"
+        android:textSize="44sp"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginTop="32dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:fontFamily="sans-serif-light" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,6 +45,7 @@
         android:textColor="@color/white"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:alpha="0.8" />
+        android:alpha="0.8"
+        android:fontFamily="sans-serif-light" />
 
 </LinearLayout>
