--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,14 +38,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="4dp"
+        android:padding="0dp"
         android:background="@drawable/rounded_board"
-        android:elevation="1dp">
+        android:elevation="1dp"
+        android:gravity="top|center_horizontal">
 
         <TableLayout
             android:id="@+id/gameBoard"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center_horizontal" />
 
     </FrameLayout>
 
