--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,25 +6,13 @@
     android:gravity="center"
     android:background="@color/dark_blue">
 
-    <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/splash_circle"
-        android:elevation="8dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="C4"
-            android:textSize="72sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:fontFamily="sans-serif-light" />
-
-    </LinearLayout>
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/logo"
+        android:contentDescription="Logo de Connecta 4"
+        android:scaleType="centerInside"
+        android:elevation="8dp" />
 
     <TextView
         android:layout_width="wrap_content"
